2005-06-16  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c: Make sure the size of the graphic is determined by the width and height or the viewbox or defaults, in order.
	* rsvg.c, rsvg-styles.c: applied patch by Ryan Lortie as given in bug #306494

2005-06-14  Tor Lillqvist  <tml@novell.com>

	* configure.in: Get CFLAGS and LIBS also for fontconfig and
	freetype. Don't use -Wsign-promo, gcc 3.4 says that's only for C++
	and Objective-C.

	* Makefile.am (INCLUDES): Use LIBRSVG_DATADIR instead of just
	DATADIR as that clashes with some Windows header that gets dragged
	in into some compilations. (Not that any of the source files refer
	to DATADIR.)
	(librsvg_2_la_LIBADD): Link with freetype libs.

	* librsvg-zip.in: Distribute also rsvg-view.exe and rsvg.exe. Get
	the engine and loader DLLs from correct places.

2005-06-04  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-art-paint-server.c: fixed a tiny little hard to find  bug that's
	been making small gradients screw up for ages. 

2005-06-01  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-shapes.c: fixed problems with polylines by using the generic list parser

2005-05-30  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: converted all shapes to be manipulatable
	* rsvg-filter.c: made transfer functions more similar to everything else
	
2005-05-20  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-paint-server.c, rsvg-art-paint-server.c, rsvg.c: converted to use the new create->manipulate->use system.

2005-05-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-structure.c: Fixed a problem with <use> not working.

2005-05-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* A_whole_bunch_o'_files: Did a bit of fiddling. Now Children are stored in the RsvgNode structure, since DOM seems to mandate that everything be able to have children. I shall get rid of virtual functions for adding children soon.
	* rsvg-filters.c: Made merge nodes and light sources proper objects.