@@ -1,3 +1,7 @@
+2005-06-17  Caleb Moore <c.moore@student.unsw.edu.au>
+	
+	* rsvg-styles.c: bug #273989
+
 2005-06-16  Caleb Moore <c.moore@student.unsw.edu.au>
 
 	* rsvg.c: Make sure the size of the graphic is determined by the width and height or the viewbox or defaults, in order.
